add new styles with cta by wasiu

--- a/band.html
+++ b/band.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <section class="section">
-    <header class="heading">
+  <section class="home-pg">
+    <header class="home-ct">
         <div>
             <ul>
                 <li>
