--- a/band.html
+++ b/band.html
@@ -14,7 +14,7 @@
         <div>
             <ul>
                 <li>
-                    <a href="">Home</a>
+                    <a href="band.html">Home</a>
                 </li>
 
                 <li>
