add new show file

--- a/band.html
+++ b/band.html
@@ -14,7 +14,7 @@
         <div>
             <ul>
                 <li>
-                    <a href="band.html">Home</a>
+                    <a href="home.html">Home</a>
                 </li>
 
                 <li>
@@ -26,7 +26,6 @@
     </header>
 </section>
   <h1>SHALLIPOPI</h1>
-
   <div>
   <p>
     Crown Uzama, known professionally as Shallipopi, is a Nigerian rapper, singer and songwriter. He gained initial
