add new things to the show by wasiu

--- a/band.html
+++ b/band.html
@@ -18,7 +18,7 @@
                 </li>
 
                 <li>
-                    <a href="">Show</a>
+                    <a href="show.html">Show</a>
                 </li>
             </ul>
         </div>
