--- a/band.html
+++ b/band.html
@@ -26,17 +26,8 @@
     </header>
 </section>
   <h1>SHALLIPOPI</h1>
-  <div>
-  <p>
-    Crown Uzama, known professionally as Shallipopi, is a Nigerian rapper, singer and songwriter. He gained initial
-    recognition with the release of "Obapluto" in 2023. Shallipopi was signed to Dvpper Music Distribution, a Nigerian
-    music record distribution founded by "Damillola Akinwunmi". Wikipedia
-    Born: 12 April 2000 (age 23 years), Benin City
-    Albums: Planet Pluto
-    Full name: Crown Uzama
-    Instrument(s): Keyboard; drums
-    Labels: Plutomana</p> 
- </div>
+  <img src="img/pluto 2.jpg" alt=""> <img src="img/pluto 4.jpg" alt="">
+  <img src="img/pluto 3.jpg" alt=""> <img src="img/pluto1.jpg" alt="">
 </body>
 
 </html>
