add new hrf link to the show and @ by wasiu

--- a/home.html
+++ b/home.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<link rel="stylesheet" href="css/home.css">
   <title>Home</title>
 </head>
 <body>
+  <a href="band.html">Go back</a>
   <h1>SHALLIPOPI</h1>
   <img src="img/pluto 4.jpg" alt="SHALLIPOPI">
   <div>
